// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`WebsiteThemeScope — emitted variables > bold-creative / bootstrapDefault 1`] = `
{
  "--primary": "221 83% 53%",
  "--primary-hover": "221 83% 47%",
  "--ring": "221 83% 53%",
  "--website-accent": "221 83% 53%",
  "--website-accent-solid": "hsl(221 83% 53%)",
  "--website-background": "#ffffff",
  "--website-border": "hsl(214 20% 91%)",
  "--website-container-width": "72rem",
  "--website-foreground": "hsl(222 22% 12%)",
  "--website-primary": "221 83% 53%",
  "--website-primary-muted": "hsl(221 83% 53% / 0.3)",
  "--website-primary-solid": "hsl(221 83% 53%)",
  "--website-primary-surface": "hsl(221 83% 53% / 0.08)",
  "--website-radius": "1.25rem",
  "--website-secondary": "221 83% 53%",
  "--website-secondary-solid": "hsl(221 83% 53%)",
  "--website-section-padding": "4rem",
  "--website-shadow": "0 16px 40px -8px rgb(0 0 0 / 0.24)",
  "--website-surface": "hsl(210 20% 97%)",
}
`;

exports[`WebsiteThemeScope — emitted variables > bold-creative / none 1`] = `
{
  "--primary": "265 85% 58%",
  "--primary-hover": "265 85% 52%",
  "--ring": "265 85% 58%",
  "--website-accent": "330 80% 60%",
  "--website-accent-solid": "hsl(330 80% 60%)",
  "--website-background": "#ffffff",
  "--website-border": "hsl(214 20% 91%)",
  "--website-container-width": "72rem",
  "--website-foreground": "hsl(222 22% 12%)",
  "--website-primary": "265 85% 58%",
  "--website-primary-muted": "hsl(265 85% 58% / 0.3)",
  "--website-primary-solid": "hsl(265 85% 58%)",
  "--website-primary-surface": "hsl(265 85% 58% / 0.08)",
  "--website-radius": "1.25rem",
  "--website-secondary": "22 92% 55%",
  "--website-secondary-solid": "hsl(22 92% 55%)",
  "--website-section-padding": "4rem",
  "--website-shadow": "0 16px 40px -8px rgb(0 0 0 / 0.24)",
  "--website-surface": "hsl(210 20% 97%)",
}
`;

exports[`WebsiteThemeScope — emitted variables > bold-creative / orange 1`] = `
{
  "--primary": "24 95% 53%",
  "--primary-hover": "24 95% 47%",
  "--ring": "24 95% 53%",
  "--website-accent": "43 96% 56%",
  "--website-accent-solid": "hsl(43 96% 56%)",
  "--website-background": "#ffffff",
  "--website-border": "hsl(214 20% 91%)",
  "--website-container-width": "72rem",
  "--website-foreground": "hsl(222 22% 12%)",
  "--website-primary": "24 95% 53%",
  "--website-primary-muted": "hsl(24 95% 53% / 0.3)",
  "--website-primary-solid": "hsl(24 95% 53%)",
  "--website-primary-surface": "hsl(24 95% 53% / 0.08)",
  "--website-radius": "1.25rem",
  "--website-secondary": "199 89% 38%",
  "--website-secondary-solid": "hsl(199 89% 38%)",
  "--website-section-padding": "4rem",
  "--website-shadow": "0 16px 40px -8px rgb(0 0 0 / 0.24)",
  "--website-surface": "hsl(210 20% 97%)",
}
`;

exports[`WebsiteThemeScope — emitted variables > corporate-learning / bootstrapDefault 1`] = `
{
  "--primary": "221 83% 53%",
  "--primary-hover": "221 83% 47%",
  "--ring": "221 83% 53%",
  "--website-accent": "221 83% 53%",
  "--website-accent-solid": "hsl(221 83% 53%)",
  "--website-background": "#ffffff",
  "--website-border": "hsl(214 20% 91%)",
  "--website-container-width": "90rem",
  "--website-foreground": "hsl(222 22% 12%)",
  "--website-primary": "221 83% 53%",
  "--website-primary-muted": "hsl(221 83% 53% / 0.3)",
  "--website-primary-solid": "hsl(221 83% 53%)",
  "--website-primary-surface": "hsl(221 83% 53% / 0.08)",
  "--website-radius": "0.375rem",
  "--website-secondary": "221 83% 53%",
  "--website-secondary-solid": "hsl(221 83% 53%)",
  "--website-section-padding": "2.5rem",
  "--website-shadow": "none",
  "--website-surface": "hsl(210 20% 97%)",
}
`;

exports[`WebsiteThemeScope — emitted variables > corporate-learning / none 1`] = `
{
  "--primary": "215 60% 40%",
  "--primary-hover": "215 60% 34%",
  "--ring": "215 60% 40%",
  "--website-accent": "185 55% 40%",
  "--website-accent-solid": "hsl(185 55% 40%)",
  "--website-background": "#ffffff",
  "--website-border": "hsl(214 20% 91%)",
  "--website-container-width": "90rem",
  "--website-foreground": "hsl(222 22% 12%)",
  "--website-primary": "215 60% 40%",
  "--website-primary-muted": "hsl(215 60% 40% / 0.3)",
  "--website-primary-solid": "hsl(215 60% 40%)",
  "--website-primary-surface": "hsl(215 60% 40% / 0.08)",
  "--website-radius": "0.375rem",
  "--website-secondary": "205 30% 45%",
  "--website-secondary-solid": "hsl(205 30% 45%)",
  "--website-section-padding": "2.5rem",
  "--website-shadow": "none",
  "--website-surface": "hsl(210 20% 97%)",
}
`;

exports[`WebsiteThemeScope — emitted variables > corporate-learning / orange 1`] = `
{
  "--primary": "24 95% 53%",
  "--primary-hover": "24 95% 47%",
  "--ring": "24 95% 53%",
  "--website-accent": "43 96% 56%",
  "--website-accent-solid": "hsl(43 96% 56%)",
  "--website-background": "#ffffff",
  "--website-border": "hsl(214 20% 91%)",
  "--website-container-width": "90rem",
  "--website-foreground": "hsl(222 22% 12%)",
  "--website-primary": "24 95% 53%",
  "--website-primary-muted": "hsl(24 95% 53% / 0.3)",
  "--website-primary-solid": "hsl(24 95% 53%)",
  "--website-primary-surface": "hsl(24 95% 53% / 0.08)",
  "--website-radius": "0.375rem",
  "--website-secondary": "199 89% 38%",
  "--website-secondary-solid": "hsl(199 89% 38%)",
  "--website-section-padding": "2.5rem",
  "--website-shadow": "none",
  "--website-surface": "hsl(210 20% 97%)",
}
`;

exports[`WebsiteThemeScope — emitted variables > minimal-editorial / bootstrapDefault 1`] = `
{
  "--primary": "221 83% 53%",
  "--primary-hover": "221 83% 47%",
  "--ring": "221 83% 53%",
  "--website-accent": "221 83% 53%",
  "--website-accent-solid": "hsl(221 83% 53%)",
  "--website-background": "#ffffff",
  "--website-border": "hsl(214 20% 91%)",
  "--website-container-width": "48rem",
  "--website-foreground": "hsl(222 22% 12%)",
  "--website-primary": "221 83% 53%",
  "--website-primary-muted": "hsl(221 83% 53% / 0.3)",
  "--website-primary-solid": "hsl(221 83% 53%)",
  "--website-primary-surface": "hsl(221 83% 53% / 0.08)",
  "--website-radius": "0px",
  "--website-secondary": "221 83% 53%",
  "--website-secondary-solid": "hsl(221 83% 53%)",
  "--website-section-padding": "6rem",
  "--website-shadow": "none",
  "--website-surface": "hsl(210 20% 97%)",
}
`;

exports[`WebsiteThemeScope — emitted variables > minimal-editorial / none 1`] = `
{
  "--primary": "220 15% 15%",
  "--primary-hover": "220 15% 9%",
  "--ring": "220 15% 15%",
  "--website-accent": "14 65% 50%",
  "--website-accent-solid": "hsl(14 65% 50%)",
  "--website-background": "#ffffff",
  "--website-border": "hsl(214 20% 91%)",
  "--website-container-width": "48rem",
  "--website-foreground": "hsl(222 22% 12%)",
  "--website-primary": "220 15% 15%",
  "--website-primary-muted": "hsl(220 15% 15% / 0.3)",
  "--website-primary-solid": "hsl(220 15% 15%)",
  "--website-primary-surface": "hsl(220 15% 15% / 0.08)",
  "--website-radius": "0px",
  "--website-secondary": "30 8% 45%",
  "--website-secondary-solid": "hsl(30 8% 45%)",
  "--website-section-padding": "6rem",
  "--website-shadow": "none",
  "--website-surface": "hsl(210 20% 97%)",
}
`;

exports[`WebsiteThemeScope — emitted variables > minimal-editorial / orange 1`] = `
{
  "--primary": "24 95% 53%",
  "--primary-hover": "24 95% 47%",
  "--ring": "24 95% 53%",
  "--website-accent": "43 96% 56%",
  "--website-accent-solid": "hsl(43 96% 56%)",
  "--website-background": "#ffffff",
  "--website-border": "hsl(214 20% 91%)",
  "--website-container-width": "48rem",
  "--website-foreground": "hsl(222 22% 12%)",
  "--website-primary": "24 95% 53%",
  "--website-primary-muted": "hsl(24 95% 53% / 0.3)",
  "--website-primary-solid": "hsl(24 95% 53%)",
  "--website-primary-surface": "hsl(24 95% 53% / 0.08)",
  "--website-radius": "0px",
  "--website-secondary": "199 89% 38%",
  "--website-secondary-solid": "hsl(199 89% 38%)",
  "--website-section-padding": "6rem",
  "--website-shadow": "none",
  "--website-surface": "hsl(210 20% 97%)",
}
`;

exports[`WebsiteThemeScope — emitted variables > modern-education / bootstrapDefault 1`] = `
{
  "--accent": "219 42% 94%",
  "--accent-foreground": "219 22% 13%",
  "--background": "0 0% 100%",
  "--border": "219 23% 89%",
  "--border-strong": "219 5% 59%",
  "--card": "0 0% 100%",
  "--card-foreground": "219 22% 13%",
  "--destructive": "350 54% 45%",
  "--destructive-foreground": "0 0% 100%",
  "--foreground": "219 22% 13%",
  "--input": "219 5% 59%",
  "--muted": "219 42% 94%",
  "--muted-foreground": "219 9% 40%",
  "--popover": "0 0% 100%",
  "--popover-foreground": "219 22% 13%",
  "--primary": "221 83% 53%",
  "--primary-foreground": "0 0% 100%",
  "--primary-hover": "221 86% 45%",
  "--ring": "221 83% 53%",
  "--secondary": "219 54% 97%",
  "--secondary-foreground": "219 22% 13%",
  "--success": "154 100% 25%",
  "--warning": "35 100% 29%",
  "--website-accent": "221 83% 53%",
  "--website-accent-solid": "hsl(221 83% 53%)",
  "--website-background": "hsl(0 0% 100%)",
  "--website-border": "hsl(219 23% 89%)",
  "--website-chip-bg": "hsl(220 72% 93%)",
  "--website-chip-fg": "hsl(219 22% 13%)",
  "--website-container-width": "72rem",
  "--website-cta": "hsl(221 83% 53%)",
  "--website-cta-border": "transparent",
  "--website-cta-foreground": "hsl(0 0% 100%)",
  "--website-cta-hover": "hsl(221 86% 45%)",
  "--website-cta-pressed": "hsl(221 100% 37%)",
  "--website-error": "hsl(350 54% 45%)",
  "--website-focus": "hsl(221 83% 53%)",
  "--website-foreground": "hsl(219 22% 13%)",
  "--website-foreground-muted": "hsl(219 9% 40%)",
  "--website-highlight": "hsl(221 83% 53%)",
  "--website-icon-fg": "hsl(221 83% 53%)",
  "--website-icon-tile": "hsl(221 83% 53% / 0.1)",
  "--website-ink": "hsl(219 29% 9%)",
  "--website-ink-cta": "hsl(221 83% 53%)",
  "--website-ink-cta-foreground": "hsl(0 0% 100%)",
  "--website-ink-foreground": "hsl(0 0% 100%)",
  "--website-ink-glow": "hsl(221 83% 53% / 0.45)",
  "--website-ink-glow-detail": "hsl(221 83% 53% / 0.3)",
  "--website-ink-muted": "hsl(0 0% 100% / 0.78)",
  "--website-input-border": "hsl(219 5% 59%)",
  "--website-link": "hsl(221 83% 53%)",
  "--website-primary": "221 83% 53%",
  "--website-primary-muted": "hsl(221 83% 53% / 0.3)",
  "--website-primary-solid": "hsl(221 83% 53%)",
  "--website-primary-surface": "hsl(221 83% 53% / 0.08)",
  "--website-radius": "0.75rem",
  "--website-secondary": "221 83% 53%",
  "--website-secondary-solid": "hsl(221 83% 53%)",
  "--website-section-padding": "4rem",
  "--website-shadow": "0 2px 8px -2px rgb(0 0 0 / 0.08)",
  "--website-shape": "hsl(221 83% 53% / 0.16)",
  "--website-shape-detail": "hsl(221 83% 53%)",
  "--website-success": "hsl(154 100% 25%)",
  "--website-surface": "hsl(219 54% 97%)",
  "--website-surface-muted": "hsl(219 42% 94%)",
  "--website-warning": "hsl(35 100% 29%)",
}
`;

exports[`WebsiteThemeScope — emitted variables > modern-education / none 1`] = `
{
  "--accent": "217 42% 94%",
  "--accent-foreground": "217 23% 13%",
  "--background": "217 100% 99%",
  "--border": "217 23% 89%",
  "--border-strong": "217 5% 58%",
  "--card": "217 100% 99%",
  "--card-foreground": "217 23% 13%",
  "--destructive": "350 54% 45%",
  "--destructive-foreground": "0 0% 100%",
  "--foreground": "217 23% 13%",
  "--input": "217 5% 58%",
  "--muted": "217 42% 94%",
  "--muted-foreground": "217 9% 40%",
  "--popover": "217 100% 99%",
  "--popover-foreground": "217 23% 13%",
  "--primary": "217 87% 53%",
  "--primary-foreground": "0 0% 100%",
  "--primary-hover": "215 98% 43%",
  "--ring": "217 87% 53%",
  "--secondary": "217 54% 97%",
  "--secondary-foreground": "217 23% 13%",
  "--success": "154 100% 25%",
  "--warning": "35 100% 29%",
  "--website-accent": "38 92% 55%",
  "--website-accent-solid": "hsl(38 92% 55%)",
  "--website-background": "hsl(217 100% 99%)",
  "--website-border": "hsl(217 23% 89%)",
  "--website-chip-bg": "hsl(217 75% 93%)",
  "--website-chip-fg": "hsl(217 23% 13%)",
  "--website-container-width": "72rem",
  "--website-cta": "hsl(217 87% 53%)",
  "--website-cta-border": "transparent",
  "--website-cta-foreground": "hsl(0 0% 100%)",
  "--website-cta-hover": "hsl(215 98% 43%)",
  "--website-cta-pressed": "hsl(215 100% 36%)",
  "--website-error": "hsl(350 54% 45%)",
  "--website-focus": "hsl(217 87% 53%)",
  "--website-foreground": "hsl(217 23% 13%)",
  "--website-foreground-muted": "hsl(217 9% 40%)",
  "--website-highlight": "hsl(38 92% 55%)",
  "--website-icon-fg": "hsl(217 83% 51%)",
  "--website-icon-tile": "hsl(217 87% 53% / 0.1)",
  "--website-ink": "hsl(217 30% 9%)",
  "--website-ink-cta": "hsl(217 87% 53%)",
  "--website-ink-cta-foreground": "hsl(0 0% 100%)",
  "--website-ink-foreground": "hsl(0 0% 100%)",
  "--website-ink-glow": "hsl(217 87% 53% / 0.45)",
  "--website-ink-glow-detail": "hsl(38 92% 55% / 0.3)",
  "--website-ink-muted": "hsl(0 0% 100% / 0.78)",
  "--website-input-border": "hsl(217 5% 58%)",
  "--website-link": "hsl(217 83% 51%)",
  "--website-primary": "217 83% 51%",
  "--website-primary-muted": "hsl(217 87% 53% / 0.3)",
  "--website-primary-solid": "hsl(217 83% 51%)",
  "--website-primary-surface": "hsl(217 87% 53% / 0.08)",
  "--website-radius": "0.75rem",
  "--website-secondary": "173 65% 40%",
  "--website-secondary-solid": "hsl(173 65% 40%)",
  "--website-section-padding": "4rem",
  "--website-shadow": "0 2px 8px -2px rgb(0 0 0 / 0.08)",
  "--website-shape": "hsl(217 87% 53% / 0.16)",
  "--website-shape-detail": "hsl(38 92% 55%)",
  "--website-success": "hsl(154 100% 25%)",
  "--website-surface": "hsl(217 54% 97%)",
  "--website-surface-muted": "hsl(217 42% 94%)",
  "--website-warning": "hsl(35 100% 29%)",
}
`;

exports[`WebsiteThemeScope — emitted variables > modern-education / orange 1`] = `
{
  "--accent": "19 42% 93%",
  "--accent-foreground": "19 26% 12%",
  "--background": "19 100% 99%",
  "--border": "19 24% 88%",
  "--border-strong": "19 6% 57%",
  "--card": "19 100% 99%",
  "--card-foreground": "19 26% 12%",
  "--destructive": "7 62% 43%",
  "--destructive-foreground": "0 0% 100%",
  "--foreground": "19 26% 12%",
  "--input": "19 6% 57%",
  "--muted": "19 42% 93%",
  "--muted-foreground": "19 10% 39%",
  "--popover": "19 100% 99%",
  "--popover-foreground": "19 26% 12%",
  "--primary": "25 94% 49%",
  "--primary-foreground": "19 26% 12%",
  "--primary-hover": "21 100% 63%",
  "--ring": "26 100% 45%",
  "--secondary": "19 52% 96%",
  "--secondary-foreground": "19 26% 12%",
  "--success": "94 69% 28%",
  "--warning": "37 100% 29%",
  "--website-accent": "43 96% 56%",
  "--website-accent-solid": "hsl(43 96% 56%)",
  "--website-background": "hsl(19 100% 99%)",
  "--website-border": "hsl(19 24% 88%)",
  "--website-chip-bg": "hsl(23 74% 91%)",
  "--website-chip-fg": "hsl(19 26% 12%)",
  "--website-container-width": "72rem",
  "--website-cta": "hsl(25 94% 49%)",
  "--website-cta-border": "transparent",
  "--website-cta-foreground": "hsl(19 26% 12%)",
  "--website-cta-hover": "hsl(21 100% 63%)",
  "--website-cta-pressed": "hsl(19 100% 74%)",
  "--website-error": "hsl(7 62% 43%)",
  "--website-focus": "hsl(26 100% 45%)",
  "--website-foreground": "hsl(19 26% 12%)",
  "--website-foreground-muted": "hsl(19 10% 39%)",
  "--website-highlight": "hsl(43 96% 56%)",
  "--website-icon-fg": "hsl(25 100% 36%)",
  "--website-icon-tile": "hsl(25 94% 49% / 0.1)",
  "--website-ink": "hsl(19 35% 9%)",
  "--website-ink-cta": "hsl(25 94% 49%)",
  "--website-ink-cta-foreground": "hsl(19 26% 12%)",
  "--website-ink-foreground": "hsl(0 0% 100%)",
  "--website-ink-glow": "hsl(25 94% 49% / 0.45)",
  "--website-ink-glow-detail": "hsl(43 96% 56% / 0.3)",
  "--website-ink-muted": "hsl(0 0% 100% / 0.78)",
  "--website-input-border": "hsl(19 6% 57%)",
  "--website-link": "hsl(25 100% 36%)",
  "--website-primary": "25 100% 36%",
  "--website-primary-muted": "hsl(25 94% 49% / 0.3)",
  "--website-primary-solid": "hsl(25 100% 36%)",
  "--website-primary-surface": "hsl(25 94% 49% / 0.08)",
  "--website-radius": "0.75rem",
  "--website-secondary": "198 100% 35%",
  "--website-secondary-solid": "hsl(198 100% 35%)",
  "--website-section-padding": "4rem",
  "--website-shadow": "0 2px 8px -2px rgb(0 0 0 / 0.08)",
  "--website-shape": "hsl(25 94% 49% / 0.16)",
  "--website-shape-detail": "hsl(43 96% 56%)",
  "--website-success": "hsl(94 69% 28%)",
  "--website-surface": "hsl(19 52% 96%)",
  "--website-surface-muted": "hsl(19 42% 93%)",
  "--website-warning": "hsl(37 100% 29%)",
}
`;

exports[`WebsiteThemeScope — emitted variables > premium-academy / bootstrapDefault 1`] = `
{
  "--primary": "221 83% 53%",
  "--primary-hover": "221 83% 47%",
  "--ring": "221 83% 53%",
  "--website-accent": "221 83% 53%",
  "--website-accent-solid": "hsl(221 83% 53%)",
  "--website-background": "#ffffff",
  "--website-border": "hsl(214 20% 91%)",
  "--website-container-width": "72rem",
  "--website-foreground": "hsl(222 22% 12%)",
  "--website-primary": "221 83% 53%",
  "--website-primary-muted": "hsl(221 83% 53% / 0.3)",
  "--website-primary-solid": "hsl(221 83% 53%)",
  "--website-primary-surface": "hsl(221 83% 53% / 0.08)",
  "--website-radius": "1.25rem",
  "--website-secondary": "221 83% 53%",
  "--website-secondary-solid": "hsl(221 83% 53%)",
  "--website-section-padding": "6rem",
  "--website-shadow": "0 8px 24px -4px rgb(0 0 0 / 0.12)",
  "--website-surface": "hsl(210 20% 97%)",
}
`;

exports[`WebsiteThemeScope — emitted variables > premium-academy / none 1`] = `
{
  "--primary": "222 47% 25%",
  "--primary-hover": "222 47% 19%",
  "--ring": "222 47% 25%",
  "--website-accent": "350 60% 45%",
  "--website-accent-solid": "hsl(350 60% 45%)",
  "--website-background": "#ffffff",
  "--website-border": "hsl(214 20% 91%)",
  "--website-container-width": "72rem",
  "--website-foreground": "hsl(222 22% 12%)",
  "--website-primary": "222 47% 25%",
  "--website-primary-muted": "hsl(222 47% 25% / 0.3)",
  "--website-primary-solid": "hsl(222 47% 25%)",
  "--website-primary-surface": "hsl(222 47% 25% / 0.08)",
  "--website-radius": "1.25rem",
  "--website-secondary": "38 75% 48%",
  "--website-secondary-solid": "hsl(38 75% 48%)",
  "--website-section-padding": "6rem",
  "--website-shadow": "0 8px 24px -4px rgb(0 0 0 / 0.12)",
  "--website-surface": "hsl(210 20% 97%)",
}
`;

exports[`WebsiteThemeScope — emitted variables > premium-academy / orange 1`] = `
{
  "--primary": "24 95% 53%",
  "--primary-hover": "24 95% 47%",
  "--ring": "24 95% 53%",
  "--website-accent": "43 96% 56%",
  "--website-accent-solid": "hsl(43 96% 56%)",
  "--website-background": "#ffffff",
  "--website-border": "hsl(214 20% 91%)",
  "--website-container-width": "72rem",
  "--website-foreground": "hsl(222 22% 12%)",
  "--website-primary": "24 95% 53%",
  "--website-primary-muted": "hsl(24 95% 53% / 0.3)",
  "--website-primary-solid": "hsl(24 95% 53%)",
  "--website-primary-surface": "hsl(24 95% 53% / 0.08)",
  "--website-radius": "1.25rem",
  "--website-secondary": "199 89% 38%",
  "--website-secondary-solid": "hsl(199 89% 38%)",
  "--website-section-padding": "6rem",
  "--website-shadow": "0 8px 24px -4px rgb(0 0 0 / 0.12)",
  "--website-surface": "hsl(210 20% 97%)",
}
`;
